form + modal + link + menu footer commit

--- a/local/assets/sass/main.sass
+++ b/local/assets/sass/main.sass
@@ -634,6 +634,9 @@
 			padding-top: 30px
 			padding-bottom: 30px
 
+			.wpcf7-list-item-label::before
+				border-color: $accent
+
 		h3
 			width: 100%
 			margin-bottom: 25px
@@ -1756,7 +1759,6 @@ iframe
 
 .menu-menu-container
 	width: 100%
-
 
 
 @import "media"
