--- a/local/assets/sass/_base/_modal.sass
+++ b/local/assets/sass/_base/_modal.sass
@@ -71,9 +71,11 @@
 		&_line
 			position: relative
 			width: 48%
+			margin-bottom: 20px
 
 		&_textarea
 			width: 100%
+			margin-bottom: 20px
 
 	&__content
 		width: 48%
@@ -101,3 +103,51 @@
 
 .popup_visible .modal
 	transform: scale(1)
+
+.wpcf7-form
+	width: 100%
+	display: flex
+	justify-content: space-between
+	flex-wrap: wrap
+	justify-content: space-between
+
+.wpcf7-list-item-label
+	display: block
+	position: relative
+	padding-left: 40px
+	cursor: pointer
+	margin-bottom: 0
+	margin-right: 0
+	font-size: 10px
+	line-height: 1.2
+	
+	&::before,
+	&::after
+		content: ''
+		position: absolute
+		left: 0
+		transition: all .6s
+
+	&::before
+		width: 20px
+		height: 20px
+		border: 1px solid $text
+
+	&::after
+		width: 8px
+		height: 16px
+		border-bottom: 3px solid $accent
+		border-right: 3px solid $accent
+		border-radius: 4px
+		left: 6px
+		top: 0
+		
+input[type="checkbox"]
+	display: none
+
+input[type="checkbox"]:checked + .wpcf7-list-item-label::after
+	transform: scale(1) rotate(45deg)
+
+input[type="checkbox"] + .wpcf7-list-item-label::after
+	transform: scale(0) rotate(45deg)
+
