--- a/local/assets/sass/_base/_form.sass
+++ b/local/assets/sass/_base/_form.sass
@@ -15,7 +15,6 @@
 	width: 90%
 	margin: 0 auto
 	transition: all .6s
-	animation: error .3s linear 1 forwards
 	color: $white !important
 	text-align: center
 	font-weight: 600
@@ -43,7 +42,7 @@ div.wpcf7-validation-errors,
 div.wpcf7-acceptance-missing
 	position: absolute
 	left: 0
-	top: 95%
+	top: 100%
 	margin: 0
 	text-align: center
 	color: red
@@ -53,12 +52,16 @@ div.wpcf7-acceptance-missing
 div.wpcf7-mail-sent-ok
 	position: absolute
 	left: 0
-	top: 95%
+	top: 100%
 	margin: 0
 	text-align: center
 	color: green
 	border: none
 	max-width: 100%
+
+span.wpcf7-not-valid-tip
+	font-size: 10px
+
+div.wpcf7 .ajax-loader
+	position: absolute
 	
-
-
