--- a/local/assets/sass/_base.sass
+++ b/local/assets/sass/_base.sass
@@ -78,12 +78,12 @@ h1, .title
 	text-transform: uppercase
 	margin-bottom: 60px
 
-h2
+h2, .h2
 	font-size: 44px
 	text-align: center
 	margin-bottom: 40px
 
-h3
+h3, .h3
 	font-size: 20px
 	font-weight: 400
 	text-transform: uppercase
