--- a/local/assets/sass/_base/_modal.sass
+++ b/local/assets/sass/_base/_modal.sass
@@ -3,12 +3,12 @@
 	z-index: 1
 	transform: scale(0.8)
 
-	h3
-		width: 100%
-		text-transform: uppercase
-		font-size: 20px
-		margin-bottom: 15px
-		font-weight: 400
+	.h3
+		width: 100% !important
+		text-transform: uppercase !important
+		font-size: 20px !important
+		margin-bottom: 15px !important
+		font-weight: 400 !important
 
 	p, ol
 		font-size: 15px
@@ -22,7 +22,6 @@
 
 	.btn
 		width: 100%
-
 
 	&__close
 		position: absolute
