--- a/local/assets/sass/_media.sass
+++ b/local/assets/sass/_media.sass
@@ -37,9 +37,9 @@
 	h1, .title
 		font-size: 50px
 
-	h2
-		font-size: 36px
-		margin-bottom: 20px
+	h2, .h2
+		font-size: 36px !important
+		margin-bottom: 20px !important
 
 	.modal
 		&__container
@@ -366,7 +366,7 @@
 
 	.product
 		&--grums
-			margin-bottom: 90px
+			margin-bottom: 110px
 
 		&--hero
 			padding-bottom: 100px
@@ -490,7 +490,7 @@
 			font-size: 18px
 
 		&--active
-			z-index: 2
+			z-index: 8
 
 			ul
 				top: 100%
@@ -749,7 +749,7 @@
 				
 	.product
 		&--grums
-			margin-bottom: 60px
+			margin-bottom: 75px
 
 		&--hero
 			padding-bottom: 80px
@@ -841,6 +841,11 @@
 
 
 @media only screen and (max-width : 576px)
+	div.wpcf7-acceptance-missing,
+	div.wpcf7-validation-errors,
+	div.wpcf7-mail-sent-ok
+		position: relative
+
 	.jobs
 		&__item
 			width: 100%
@@ -891,8 +896,8 @@
 		br
 			display: none
 
-	h2, .client__title
-		font-size: 28px
+	h2, .client__title, .h2
+		font-size: 28px !important
 
 	input,
 	.btn
@@ -909,9 +914,6 @@
 		&__form,
 		&__content
 			width: 100%
-
-		label
-			margin-bottom: 30px
 
 		li, p
 			margin-bottom: 10px
@@ -1057,10 +1059,10 @@
 	h1, .title
 		font-size: 28px !important
 
-	h2
-		font-size: 26px
+	h2, .h2
+		font-size: 26px !important
 
-	h3
+	h3, .h3
 		font-size: 16px !important
 
 	input,
