final pravki commit

--- a/local/assets/sass/main.sass
+++ b/local/assets/sass/main.sass
@@ -1656,7 +1656,9 @@
 
 	h3, .h3
 		color: $white
-
+		text-transform: uppercase
+		margin-bottom: 0 !important
+		font-size: 20px !important
 		a
 			color: $white
 
