--- a/local/assets/sass/_base.sass
+++ b/local/assets/sass/_base.sass
@@ -84,7 +84,7 @@ h2, .h2
 	margin-bottom: 40px
 
 h3, .h3
-	font-size: 20px
+	font-size: 20px !important
 	font-weight: 400
 	text-transform: uppercase
 
